--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vesktopplus",
+    "name": "vesktop",
     "version": "1.5.3",
     "private": true,
     "description": "A fork of Vesktop pre-packaged with Vencord+",
